complete-genome-interval-graph/css/index.css
#navbar {
  margin-bottom: 0px;
}

.fragments-note-container {
  min-height: 40px
}
/* Main SVG styling */
svg.plot {
  border: 1px solid black;
}

.brush .selection {
  stroke: steelblue;
  fill-opacity: .125;
  shape-rendering: crispEdges;
}

.highlighted .selection {
  stroke: orange;
  stroke-width: 2;
}

.axis text {
  font: 11px sans-serif;
  fill: steelblue;
  pointer-events: none;
  user-select: none;
}

.axis--y g.tick line {
  stroke: #777;
  stroke-dasharray: 2,2;
}

.axis--y .domain {
  stroke: transparent;
}
.chromo-legend .label-chromosome {
  font-size: 18px;
  font-weight: normal;
  fill: #FFF;
  stroke: #FFF;
  pointer-events: none;
  user-select: none;
}
rect.panel {
  stroke: steelblue;
  stroke-width: 2.5;
  fill-opacity: 0.05;
  cursor: move;
  pointer-events: all;
}
.shape.highlighted {
  fill: white !important;
}
.walk-highlighted {
  fill: rgb(255, 127, 14) !important;
}
path.connection {
  fill: none;
  shape-rendering: "optimizeQuality";
}
path.connection.local {
  stroke-width: 1;
  stroke: #777;
  opacity: 0.33;
}
path.connection.junction, svg path.connection.ALT {
  stroke-width: 2;
  stroke: red;
  opacity: 0.5;
}
path.connection.LOOSE {
  stroke-width: 2;
  stroke: steelblue;
  stroke-dasharray: 3, 1;
  opacity: 0.75;
}
path.connection.highlighted {
  stroke-width: 3 !important;;
  opacity: 1 !important;;
}
polygon.gene {
  cursor: pointer;
}
text.gene-label {
  font: 11px sans-serif;
  fill: steelblue;
  pointer-events: none;
  user-select: none;
}
/* Popover Styling */
div.popover {
  max-width: 100%;
  position: absolute;
  pointer-events: none;
  background: rgba(255,255,255,0.5);
}
div.popover .table-label {
  color: #404041;
  line-height: 16px;
  padding: 5px 0px 3px 0px;
}
div.popover .table-value {
  color: #404041;
  line-height: 16px;
  padding: 5px 5px 3px 5px;
}
/* Modal window styling */
.modal {
  text-align: center;
  padding: 0!important;
}

.modal:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  margin-right: -4px;
}
.modal-body {
  max-height: 1010px;
  overflow-y: auto;
  padding: 0px;
}
.modal-dialog {
  display: inline-block;
  text-align: left;
  vertical-align: middle;
}
/* Locate Modal window styling */
#locate-modal-body {
  padding: 20px 20px 5px;
}

