fix zoom on inner panels, remove axis on top of legend, remove genome labels on tooltips, add chromosome separator lines, move chromosome M between X and Y, fix spacing for popover

--- a/complete-genome-interval-graph/css/index.css
+++ b/complete-genome-interval-graph/css/index.css
@@ -44,6 +44,10 @@ svg.plot {
   pointer-events: none;
   user-select: none;
 }
+.chromo-legend .label-separator {
+  pointer-events: none;
+  user-select: none;
+}
 rect.panel {
   stroke: steelblue;
   stroke-width: 2.5;
@@ -87,6 +91,12 @@ polygon.gene {
 text.gene-label {
   font: 11px sans-serif;
   fill: steelblue;
+  pointer-events: none;
+  user-select: none;
+}
+text.chromo-text {
+  fill: #FFF;
+  font: 11px sans-serif;
   pointer-events: none;
   user-select: none;
 }
